Fixed grid spacing

--- a/frontend/src/components/Game/Board.module.css
+++ b/frontend/src/components/Game/Board.module.css
@@ -2,6 +2,7 @@
     
 }
 .row {
+    width: 100%;
     display: inline-block;
     padding: 0;
     margin: auto;
